--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -91,6 +91,7 @@
     <color name="icons_color">#999999</color>
     <color name="icons_color_dark">#ffffff</color>
     <color name="more_listtitle_color">#ffffff</color>
+    <color name="user_name_text_color">#646464</color>
     <color name="change_language_color">#ffffff</color>
     <color name="progress_bar_color">#006de4</color>
     <color name="splash_bg_color">#1F1E2F</color>
