--- a/app/src/main/res/layout/toolbar_search_result.xml
+++ b/app/src/main/res/layout/toolbar_search_result.xml
@@ -40,7 +40,7 @@
                 android:layout_marginRight="@dimen/tsrTitleLeft"
                 android:layout_toRightOf="@+id/home_icon_back"
                 android:ellipsize="end"
-                android:fontFamily="@font/roboto_regular"
+                android:fontFamily="@font/sukhumvittadmai_bold"
                 android:gravity="center_vertical"
                 android:maxLines="1"
                 android:singleLine="true"
