font changes wip

--- a/app/src/main/res/layout/detail_screen.xml
+++ b/app/src/main/res/layout/detail_screen.xml
@@ -148,7 +148,7 @@
                                     android:id="@+id/movie_title"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:fontFamily="@font/sarabun_v7_thai_latin_medium"
+                                    android:fontFamily="@font/sukhumvittadmai_bold"
                                     android:lineHeight="@dimen/movie_title_line_height"
                                     android:singleLine="true"
                                     android:layout_marginRight="@dimen/_4sdp"
@@ -173,9 +173,9 @@
                                         android:layout_width="wrap_content"
                                         android:layout_height="wrap_content"
                                         android:layout_alignParentRight="true"
-                                        android:background="@drawable/bordrer_button"
+                                        android:background="@drawable/rounded_button"
                                         android:ellipsize="end"
-                                        android:fontFamily="@font/sarabun_v7_thai_latin_semibold"
+                                        android:fontFamily="@font/sukhumvittadmai_bold"
                                         android:gravity="center"
                                         android:maxLines="3"
                                         android:paddingLeft="@dimen/detailMorePaddingLeft"
@@ -195,7 +195,7 @@
                                         android:layout_marginTop="2dp"
                                         android:background="@drawable/rounded_button"
                                         android:ellipsize="end"
-                                        android:fontFamily="@font/sarabun_v7_thai_latin_semibold"
+                                        android:fontFamily="@font/sukhumvittadmai_bold"
                                         android:maxLines="3"
                                         android:paddingLeft="@dimen/movie_metadata_txt_show_hide_padding_left"
                                         android:paddingTop="@dimen/movie_metadata_txt_show_hide_padding_top"
@@ -222,7 +222,7 @@
                                     android:layout_height="wrap_content"
                                     android:layout_gravity="center_vertical"
                                     android:layout_marginEnd="@dimen/movie_metadata_tag_margin_margin_right"
-                                    android:fontFamily="@font/sarabun_v7_thai_latin_regular"
+                                    android:fontFamily="@font/sukhumvittadmai_normal"
                                     android:textColor="@color/gray_thai"
                                     android:textSize="@dimen/font_small" />
 
@@ -231,7 +231,7 @@
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:layout_margin="3dp"
-                                    android:fontFamily="@font/sarabun_v7_thai_latin_regular"
+                                    android:fontFamily="@font/sukhumvittadmai_normal"
                                     android:background="@drawable/rounded_button"
                                     android:paddingLeft="@dimen/NontonSize8"
                                     android:paddingTop="@dimen/NontonSize3"
@@ -257,7 +257,7 @@
                                     android:layout_height="wrap_content"
                                     android:layout_marginEnd="6dp"
                                     android:ellipsize="end"
-                                    android:fontFamily="@font/sarabun_v7_thai_latin_regular"
+                                    android:fontFamily="@font/sukhumvittadmai_medium"
                                     android:lineSpacingExtra="2dp"
                                     android:maxLines="2"
                                     android:text="@{responseApi.description.trim()}"
@@ -286,7 +286,7 @@
                                             <TextView
                                                 android:layout_width="wrap_content"
                                                 android:layout_height="wrap_content"
-                                                android:fontFamily="@font/sarabun_v7_thai_latin_semibold"
+                                                android:fontFamily="@font/sukhumvittadmai_bold"
                                                 android:text="@string/cast"
                                                 android:textColor="?attr/cast_title_color"
                                                 android:textSize="@dimen/font_medium" />
@@ -295,7 +295,7 @@
                                                 android:id="@+id/cast_text"
                                                 android:layout_width="wrap_content"
                                                 android:layout_height="wrap_content"
-                                                android:fontFamily="@font/sarabun_v7_thai_latin_regular"
+                                                android:fontFamily="@font/sukhumvittadmai_medium"
                                                 android:text="@{casttext}"
                                                 android:textColor="?attr/cast_text_color"
                                                 android:textSize="@dimen/font_medium" />
@@ -310,7 +310,7 @@
                                             <TextView
                                                 android:layout_width="wrap_content"
                                                 android:layout_height="wrap_content"
-                                                android:fontFamily="@font/sarabun_v7_thai_latin_semibold"
+                                                android:fontFamily="@font/sukhumvittadmai_bold"
                                                 android:text="@string/crew"
                                                 android:textColor="?attr/cast_title_color"
                                                 android:textSize="@dimen/font_medium" />
@@ -319,7 +319,7 @@
                                                 android:id="@+id/crew_text"
                                                 android:layout_width="wrap_content"
                                                 android:layout_height="wrap_content"
-                                                android:fontFamily="@font/sarabun_v7_thai_latin_regular"
+                                                android:fontFamily="@font/sukhumvittadmai_medium"
                                                 android:text="@{crewtext}"
                                                 android:textColor="?attr/cast_text_color"
                                                 android:textSize="@dimen/font_medium" />
@@ -340,7 +340,7 @@
                                         android:layout_width="wrap_content"
                                         android:layout_height="wrap_content"
                                         android:ellipsize="end"
-                                        android:fontFamily="@font/sarabun_v7_thai_latin_semibold"
+                                        android:fontFamily="@font/sukhumvittadmai_bold"
                                         android:maxLines="2"
                                         android:padding="5dp"
                                         android:textAllCaps="true"
