--- a/app/src/main/res/layout-sw720dp-land/row_slider_live.xml
+++ b/app/src/main/res/layout-sw720dp-land/row_slider_live.xml
@@ -52,7 +52,7 @@
                             android:layout_height="wrap_content"
                             android:layout_alignParentLeft="true"
                             android:layout_alignParentBottom="true"
-                            android:fontFamily="@font/roboto_medium"
+                            android:fontFamily="@font/sukhumvittadmai_medium"
                             android:gravity="left"
                             android:singleLine="true"
                             android:text="This is the label"
