--- a/app/src/main/res/layout/all_season_listing.xml
+++ b/app/src/main/res/layout/all_season_listing.xml
@@ -17,6 +17,7 @@
             android:text=""
             android:layout_centerVertical="true"
             android:textColor="@color/description_title_yellow"
+            android:fontFamily="@font/sukhumvittadmai_bold"
             android:textSize="@dimen/font_large" />
 
 
