--- a/app/src/main/res/layout/season_fragment_layout.xml
+++ b/app/src/main/res/layout/season_fragment_layout.xml
@@ -25,7 +25,7 @@
                 android:layout_gravity="center"
                 android:layout_marginTop="@dimen/season_heading_margin_left"
                 android:layout_marginBottom="@dimen/_70sdp"
-                android:fontFamily="@font/roboto_medium"
+                android:fontFamily="@font/sukhumvittadmai_medium"
                 android:gravity="center"
                 android:paddingTop="@dimen/_26sdp"
                 android:paddingBottom="@dimen/_70sdp"
@@ -49,7 +49,7 @@
                     android:layout_marginLeft="@dimen/season_heading_margin_left"
                     android:layout_marginTop="@dimen/NontonSize12"
                     android:background="@null"
-                    android:fontFamily="@font/roboto_bold"
+                    android:fontFamily="@font/sukhumvittadmai_bold"
                     android:gravity="center_vertical"
                     android:paddingLeft="@dimen/_10sdp"
                     android:paddingRight="@dimen/_7sdp"
@@ -69,7 +69,7 @@
                 android:layout_gravity="center"
                 android:layout_marginTop="@dimen/season_heading_margin_left"
                 android:layout_marginBottom="@dimen/_70sdp"
-                android:fontFamily="@font/roboto_medium"
+                android:fontFamily="@font/sukhumvittadmai_medium"
                 android:gravity="center"
                 android:paddingTop="@dimen/_26sdp"
                 android:paddingBottom="@dimen/_70sdp"
@@ -115,7 +115,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_margin="@dimen/_7sdp"
-                    android:fontFamily="@font/roboto_regular"
+                    android:fontFamily="@font/sukhumvittadmai_bold"
                     android:gravity="center"
                     android:paddingStart="@dimen/_10sdp"
                     android:paddingEnd="@dimen/_10sdp"
