--- a/app/src/main/res/layout/episode_screen.xml
+++ b/app/src/main/res/layout/episode_screen.xml
@@ -154,7 +154,7 @@
                                         android:layout_alignParentLeft="true"
                                         android:layout_marginRight="@dimen/_4sdp"
                                         android:layout_toLeftOf="@+id/mPremiumStatus"
-                                        android:fontFamily="@font/sarabun_v7_thai_latin_medium"
+                                        android:fontFamily="@font/sukhumvittadmai_bold"
                                         android:lineHeight="@dimen/movie_title_line_height"
                                         android:singleLine="true"
                                         android:text="@{responseApi.title}"
@@ -176,9 +176,9 @@
                                             android:layout_width="wrap_content"
                                             android:layout_height="wrap_content"
                                             android:layout_alignParentRight="true"
-                                            android:background="@drawable/bordrer_button"
+                                            android:background="@drawable/rounded_button"
                                             android:ellipsize="end"
-                                            android:fontFamily="@font/sarabun_v7_thai_latin_semibold"
+                                            android:fontFamily="@font/sukhumvittadmai_bold"
                                             android:gravity="center"
                                             android:maxLines="3"
                                             android:paddingLeft="@dimen/detailMorePaddingLeft"
@@ -198,7 +198,7 @@
                                             android:layout_marginTop="2dp"
                                             android:background="@drawable/rounded_button"
                                             android:ellipsize="end"
-                                            android:fontFamily="@font/sarabun_v7_thai_latin_semibold"
+                                            android:fontFamily="@font/sukhumvittadmai_bold"
                                             android:maxLines="3"
                                             android:paddingLeft="@dimen/movie_metadata_txt_show_hide_padding_left"
                                             android:paddingTop="@dimen/movie_metadata_txt_show_hide_padding_top"
@@ -225,7 +225,7 @@
                                         android:layout_height="wrap_content"
                                         android:layout_gravity="center_vertical"
                                         android:layout_marginEnd="@dimen/movie_metadata_tag_margin_margin_right"
-                                        android:fontFamily="@font/sarabun_v7_thai_latin_regular"
+                                        android:fontFamily="@font/sukhumvittadmai_normal"
                                         android:textColor="@color/gray_thai"
                                         android:textSize="@dimen/font_small" />
 
@@ -262,7 +262,7 @@
                                         android:layout_height="wrap_content"
                                         android:layout_marginEnd="6dp"
                                         android:ellipsize="end"
-                                        android:fontFamily="@font/sarabun_v7_thai_latin_regular"
+                                        android:fontFamily="@font/sukhumvittadmai_medium"
                                         android:lineSpacingExtra="2dp"
                                         android:maxLines="2"
                                         android:text="@{responseApi.description.trim()}"
@@ -291,7 +291,7 @@
                                                 <TextView
                                                     android:layout_width="wrap_content"
                                                     android:layout_height="wrap_content"
-                                                    android:fontFamily="@font/sarabun_v7_thai_latin_semibold"
+                                                    android:fontFamily="@font/sukhumvittadmai_bold"
                                                     android:text="@string/cast"
                                                     android:textColor="?attr/cast_title_color"
                                                     android:textSize="@dimen/font_medium" />
@@ -300,7 +300,7 @@
                                                     android:id="@+id/cast_text"
                                                     android:layout_width="wrap_content"
                                                     android:layout_height="wrap_content"
-                                                    android:fontFamily="@font/sarabun_v7_thai_latin_regular"
+                                                    android:fontFamily="@font/sukhumvittadmai_medium"
                                                     android:text="@{casttext}"
                                                     android:textColor="?attr/cast_text_color"
                                                     android:textSize="@dimen/font_medium" />
@@ -314,7 +314,7 @@
                                                 <TextView
                                                     android:layout_width="wrap_content"
                                                     android:layout_height="wrap_content"
-                                                    android:fontFamily="@font/sarabun_v7_thai_latin_semibold"
+                                                    android:fontFamily="@font/sukhumvittadmai_bold"
                                                     android:text="@string/crew"
                                                     android:textColor="?attr/cast_title_color"
                                                     android:textSize="@dimen/font_medium" />
@@ -323,7 +323,7 @@
                                                     android:id="@+id/crew_text"
                                                     android:layout_width="wrap_content"
                                                     android:layout_height="wrap_content"
-                                                    android:fontFamily="@font/sarabun_v7_thai_latin_regular"
+                                                    android:fontFamily="@font/sukhumvittadmai_medium"
                                                     android:text="@{crewtext}"
                                                     android:textColor="?attr/cast_text_color"
                                                     android:textSize="@dimen/font_medium" />
@@ -344,7 +344,7 @@
                                             android:layout_width="wrap_content"
                                             android:layout_height="wrap_content"
                                             android:ellipsize="end"
-                                            android:fontFamily="@font/sarabun_v7_thai_latin_semibold"
+                                            android:fontFamily="@font/sukhumvittadmai_bold"
                                             android:maxLines="2"
                                             android:padding="5dp"
                                             android:textAllCaps="true"
