--- a/app/src/main/res/layout/no_connection.xml
+++ b/app/src/main/res/layout/no_connection.xml
@@ -26,7 +26,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:fontFamily="@font/roboto_regular"
+                android:fontFamily="@font/sukhumvittadmai_normal"
                 android:text="@string/wake_up_connection"
                 android:textColor="?attr/movie_title_background_color"
                 android:textSize="@dimen/_16sdp" />
@@ -35,7 +35,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_5sdp"
-                android:fontFamily="@font/roboto_regular"
+                android:fontFamily="@font/sukhumvittadmai_normal"
                 android:text="@string/no_internet"
                 android:textSize="@dimen/_11sdp"
                 android:textColor="?attr/movie_title_background_color"/>
@@ -43,7 +43,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/roboto_regular"
+                android:fontFamily="@font/sukhumvittadmai_normal"
                 android:text="@string/check_connection"
                 android:textSize="@dimen/_11sdp"
                 android:textColor="?attr/movie_title_background_color"/>
@@ -53,8 +53,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_12sdp"
-                android:fontFamily="@font/roboto_regular"
-                android:background="@drawable/bordrer_button"
+                android:fontFamily="@font/sukhumvittadmai_bold"
+                android:background="@drawable/rounded_button"
                 android:paddingStart="@dimen/_40sdp"
                 android:paddingTop="@dimen/_8sdp"
                 android:paddingEnd="@dimen/_40sdp"
@@ -67,7 +67,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_10sdp"
-                android:fontFamily="@font/roboto_regular"
+                android:fontFamily="@font/sukhumvittadmai_bold"
                 android:paddingLeft="@dimen/_20sdp"
                 android:paddingTop="@dimen/_5sdp"
                 android:paddingRight="@dimen/_20sdp"
@@ -76,7 +76,7 @@
                 android:clickable="true"
                 android:visibility="invisible"
                 android:text="@string/go_to_my_downloads"
-                android:textColor="@color/moretitlecolor"
+                android:textColor="@color/description_title_yellow"
                 android:textSize="@dimen/_15sdp" />
 
 
