font changes wip

--- a/brightcovelibrary/src/main/res/layout/player_seekbar_layout.xml
+++ b/brightcovelibrary/src/main/res/layout/player_seekbar_layout.xml
@@ -24,10 +24,10 @@
         android:layout_weight="1"
         app:bar_height="2dp"
         app:buffered_color="@android:color/white"
-        app:played_color="@color/blue"
+        app:played_color="#f68b1f"
         app:scrubber_color="@android:color/white"
         app:unplayed_color="@android:color/darker_gray"
-        app:ad_marker_color="#ff9f00"
+        app:ad_marker_color="#f68b1f"
         app:ad_marker_width="6dp"
         app:scrubber_enabled_size="20dp"
         android:layout_marginStart="12dp"
