--- a/app/src/main/res/layout-land/fragment_more.xml
+++ b/app/src/main/res/layout-land/fragment_more.xml
@@ -68,15 +68,15 @@
                                 android:orientation="vertical">
 
                                 <LinearLayout
-                                    android:layout_width="@dimen/more_img_size"
-                                    android:layout_height="@dimen/more_img_size"
+                                    android:layout_width="@dimen/new_more_img_size"
+                                    android:layout_height="@dimen/new_more_img_size"
                                     android:gravity="center"
                                     android:background="@drawable/circular_drawable">
 
                                     <TextView
                                         android:id="@+id/user_name_words"
                                         android:layout_width="wrap_content"
-                                        android:textSize="@dimen/more_img_txt_size"
+                                        android:textSize="@dimen/new_more_img_txt_size"
                                         android:text=""
                                         android:fontFamily="@font/sukhumvittadmai_bold"
                                         android:textColor="@color/white"
