--- a/app/src/main/res/values-sw390dp/dimens.xml
+++ b/app/src/main/res/values-sw390dp/dimens.xml
@@ -89,7 +89,9 @@
     <dimen name="more_uper_profile_frame">150dp</dimen>
     <dimen name="more_img_top">98dp</dimen>
     <dimen name="more_img_size">98dp</dimen>
+    <dimen name="new_more_img_size">80dp</dimen>
     <dimen name="more_img_txt_size">45sp</dimen>
+    <dimen name="new_more_img_txt_size">35sp</dimen>
     <dimen name="more_login_btn_width">115sp</dimen>
     <dimen name="more_login_btn_height">35sp</dimen>
 
@@ -107,7 +109,7 @@
     <dimen name="search_header_title">15sp</dimen>
     <dimen name="search_title">15sp</dimen>
     <dimen name="search_desc">11sp</dimen>
-    <dimen name="more_fragment_item_title">17sp</dimen>
+    <dimen name="more_fragment_item_title">15sp</dimen>
 
     <dimen name="splash_logo_icon_height">180dp</dimen>
     <dimen name="splash_logo_icon_width">51dp</dimen>
