--- a/app/src/main/res/layout/episode_screen.xml
+++ b/app/src/main/res/layout/episode_screen.xml
@@ -159,7 +159,7 @@
                                         android:singleLine="true"
                                         android:text="@{responseApi.title}"
                                         android:textColor="?attr/title_color"
-                                        android:textSize="@dimen/font_large"
+                                        android:textSize="@dimen/font_medium_large"
                                         tools:targetApi="p" />
 
 
@@ -178,7 +178,7 @@
                                             android:layout_alignParentRight="true"
                                             android:background="@drawable/rounded_button"
                                             android:ellipsize="end"
-                                            android:fontFamily="@font/sukhumvittadmai_bold"
+                                            android:fontFamily="@font/sarabun_v7_thai_latin_semibold"
                                             android:gravity="center"
                                             android:maxLines="3"
                                             android:paddingLeft="@dimen/detailMorePaddingLeft"
@@ -198,7 +198,7 @@
                                             android:layout_marginTop="2dp"
                                             android:background="@drawable/rounded_button"
                                             android:ellipsize="end"
-                                            android:fontFamily="@font/sukhumvittadmai_bold"
+                                            android:fontFamily="@font/sarabun_v7_thai_latin_semibold"
                                             android:maxLines="3"
                                             android:paddingLeft="@dimen/movie_metadata_txt_show_hide_padding_left"
                                             android:paddingTop="@dimen/movie_metadata_txt_show_hide_padding_top"
@@ -262,12 +262,12 @@
                                         android:layout_height="wrap_content"
                                         android:layout_marginEnd="6dp"
                                         android:ellipsize="end"
-                                        android:fontFamily="@font/sukhumvittadmai_medium"
+                                        android:fontFamily="@font/sukhumvittadmai_normal"
                                         android:lineSpacingExtra="2dp"
                                         android:maxLines="2"
                                         android:text="@{responseApi.description.trim()}"
                                         android:textColor="?attr/title_color"
-                                        android:textSize="@dimen/font_medium" />
+                                        android:textSize="@dimen/font_small" />
 
                                     <me.vipa.app.utils.helpers.ExpandableCardLayout
                                         android:id="@+id/expandable_layout"
@@ -291,7 +291,7 @@
                                                 <TextView
                                                     android:layout_width="wrap_content"
                                                     android:layout_height="wrap_content"
-                                                    android:fontFamily="@font/sukhumvittadmai_bold"
+                                                    android:fontFamily="@font/sarabun_v7_thai_latin_semibold"
                                                     android:text="@string/cast"
                                                     android:textColor="?attr/cast_title_color"
                                                     android:textSize="@dimen/font_medium" />
@@ -300,10 +300,10 @@
                                                     android:id="@+id/cast_text"
                                                     android:layout_width="wrap_content"
                                                     android:layout_height="wrap_content"
-                                                    android:fontFamily="@font/sukhumvittadmai_medium"
+                                                    android:fontFamily="@font/sarabun_v7_thai_latin_regular"
                                                     android:text="@{casttext}"
                                                     android:textColor="?attr/cast_text_color"
-                                                    android:textSize="@dimen/font_medium" />
+                                                    android:textSize="@dimen/font_small" />
                                             </LinearLayout>
 
                                             <LinearLayout
@@ -314,7 +314,7 @@
                                                 <TextView
                                                     android:layout_width="wrap_content"
                                                     android:layout_height="wrap_content"
-                                                    android:fontFamily="@font/sukhumvittadmai_bold"
+                                                    android:fontFamily="@font/sarabun_v7_thai_latin_semibold"
                                                     android:text="@string/crew"
                                                     android:textColor="?attr/cast_title_color"
                                                     android:textSize="@dimen/font_medium" />
@@ -323,10 +323,10 @@
                                                     android:id="@+id/crew_text"
                                                     android:layout_width="wrap_content"
                                                     android:layout_height="wrap_content"
-                                                    android:fontFamily="@font/sukhumvittadmai_medium"
+                                                    android:fontFamily="@font/sarabun_v7_thai_latin_regular"
                                                     android:text="@{crewtext}"
                                                     android:textColor="?attr/cast_text_color"
-                                                    android:textSize="@dimen/font_medium" />
+                                                    android:textSize="@dimen/font_small" />
                                             </LinearLayout>
                                         </LinearLayout>
                                     </me.vipa.app.utils.helpers.ExpandableCardLayout>
@@ -344,7 +344,7 @@
                                             android:layout_width="wrap_content"
                                             android:layout_height="wrap_content"
                                             android:ellipsize="end"
-                                            android:fontFamily="@font/sukhumvittadmai_bold"
+                                            android:fontFamily="@font/sarabun_v7_thai_latin_semibold"
                                             android:maxLines="2"
                                             android:padding="5dp"
                                             android:textAllCaps="true"
