--- a/app/src/main/res/layout/activity_series_detail.xml
+++ b/app/src/main/res/layout/activity_series_detail.xml
@@ -211,7 +211,7 @@
                                     android:singleLine="true"
                                     android:text=""
                                     android:textColor="?attr/title_color"
-                                    android:textSize="@dimen/font_large"
+                                    android:textSize="@dimen/font_medium_large"
                                     android:layout_marginTop="10dp"
                                     tools:targetApi="p" />
 
@@ -241,12 +241,12 @@
                                         android:layout_height="wrap_content"
                                         android:layout_marginEnd="6dp"
                                         android:ellipsize="end"
-                                        android:fontFamily="@font/sukhumvittadmai_medium"
+                                        android:fontFamily="@font/sukhumvittadmai_normal"
                                         android:lineSpacingExtra="2dp"
                                         android:maxLines="2"
                                         android:text="@{responseApi.trim()}"
                                         android:textColor="?attr/title_color"
-                                        android:textSize="@dimen/font_medium" />
+                                        android:textSize="@dimen/font_small" />
 
                                     <me.vipa.app.utils.helpers.ExpandableCardLayout
                                         android:id="@+id/expandable_layout"
@@ -282,7 +282,7 @@
                                                     android:fontFamily="@font/sukhumvittadmai_medium"
                                                     android:text="@{casttext}"
                                                     android:textColor="?attr/cast_text_color"
-                                                    android:textSize="@dimen/font_medium" />
+                                                    android:textSize="@dimen/font_small" />
                                             </LinearLayout>
 
                                             <LinearLayout
@@ -305,7 +305,7 @@
                                                     android:fontFamily="@font/sukhumvittadmai_medium"
                                                     android:text="@{crewtext}"
                                                     android:textColor="?attr/cast_text_color"
-                                                    android:textSize="@dimen/font_medium" />
+                                                    android:textSize="@dimen/font_small" />
                                             </LinearLayout>
                                         </LinearLayout>
                                     </me.vipa.app.utils.helpers.ExpandableCardLayout>
