enveu setup wip

--- a/app/src/main/res/layout/activity_series_detail.xml
+++ b/app/src/main/res/layout/activity_series_detail.xml
@@ -329,7 +329,7 @@
                                             android:textAllCaps="true"
                                             android:text="@{expandabletext}"
                                             android:textColor="?attr/more_less_text_color"
-                                            android:textSize="@dimen/font_medium" />
+                                            android:textSize="@dimen/detailMore" />
                                     </LinearLayout>
                                 </LinearLayout>
 
