--- a/app/src/main/res/layout/noresultfound.xml
+++ b/app/src/main/res/layout/noresultfound.xml
@@ -26,7 +26,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:fontFamily="@font/sarabun_v7_thai_latin_regular"
+                android:fontFamily="@font/sukhumvittadmai_normal"
                 android:text="@string/no_result_found"
                 android:textColor="@color/gray"
                 android:textSize="15sp" />
@@ -36,10 +36,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_12sdp"
-                android:background="@drawable/bordrer_button"
+                android:background="@drawable/rounded_button"
                 android:clickable="true"
                 android:focusable="true"
-                android:fontFamily="@font/sarabun_v7_thai_latin_regular"
+                android:fontFamily="@font/sukhumvittadmai_normal"
                 android:paddingStart="@dimen/_35sdp"
                 android:paddingTop="@dimen/_8sdp"
                 android:paddingEnd="@dimen/_35sdp"
