--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -7,64 +7,43 @@
         android:id="@+id/splashRoot"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/white"
         tools:context="com.vipa.app.me.vipa.app.activities.splash.ui.ActivitySplash">
 
         <ImageView
             android:id="@+id/img_logo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="?attr/app_logo"
-            android:visibility="visible"
-            app:layout_constraintBottom_toTopOf="@+id/textView"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
-
-        <TextView
-            android:id="@+id/textView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="M V   H U B   P L U S"
-            android:textColor="?attr/watchlist_item_episode_color"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <RelativeLayout
-            android:id="@+id/flap_view"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_marginTop="30dp"
-            android:background="@drawable/flap_border"
-            android:rotation="90"
-            android:visibility="gone"
-            app:layout_constraintBottom_toTopOf="@id/progress_horizontal"
-            app:layout_constraintDimensionRatio="H,1:1"
-            app:layout_constraintStart_toStartOf="@id/progress_horizontal"
-            app:layout_constraintTop_toTopOf="parent"></RelativeLayout>
-
-        <RelativeLayout
-            android:id="@+id/flap_view1"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="#009FFF"
-            android:visibility="gone"
-            app:layout_constraintBottom_toBottomOf="@id/progress_horizontal"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <ProgressBar
-            android:id="@+id/progress_horizontal"
-            style="?android:attr/progressBarStyleHorizontal"
-            android:layout_width="match_parent"
-            android:layout_height="5dp"
-            android:padding="0dp"
-            android:progress="0"
-            android:progressDrawable="@drawable/progress_drawable"
-            android:visibility="gone"
+            android:visibility="visible"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/textView" />
+            android:scaleType="fitXY"
+            />
+
+
+
+
+
+<!--        <RelativeLayout-->
+<!--            android:id="@+id/flap_view1"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="match_parent"-->
+<!--            android:background="#009FFF"-->
+<!--            android:visibility="gone"-->
+<!--            app:layout_constraintBottom_toBottomOf="@id/progress_horizontal"-->
+<!--            app:layout_constraintTop_toTopOf="parent" />-->
+
+<!--        <ProgressBar-->
+<!--            android:id="@+id/progress_horizontal"-->
+<!--            style="?android:attr/progressBarStyleHorizontal"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="5dp"-->
+<!--            android:padding="0dp"-->
+<!--            android:progress="0"-->
+<!--            android:progressDrawable="@drawable/progress_drawable"-->
+<!--            android:visibility="gone"-->
+<!--            app:layout_constraintEnd_toEndOf="parent"-->
+<!--            app:layout_constraintStart_toStartOf="parent"-->
+<!--            app:layout_constraintTop_toBottomOf="@id/textView" />-->
 
         <include
             android:id="@+id/no_connection_layout"
